--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "author": "Adam Baldwin <baldwin@andyet.net>",
   "license": "MIT",
   "dependencies": {
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+    "request-promise": "^4.2.1"
   },
   "devDependencies": {
     "nodeunit": "*"
